doc: add band member in swagger
