# src/schemas/social-schema.ts
@@ -1,0 +1,12 @@
+import { body } from 'express-validator'
+
+const validateSocials = () => [
+  body('name')
+    .notEmpty()
+    .withMessage('username field is required'),
+  body('url')
+  .notEmpty()
+  .withMessage('password field is required')
+]
+
+export default validateSocials
